Added Chapters 2 and 3 Modified Chapter 1 and Introduction

--- a/Capitoli/dedica.tex
+++ b/Capitoli/dedica.tex
@@ -1,5 +1,13 @@
 \vspace*{\stretch{1}}
-\begin{flushright}
-    \textit{Ringraziamenti}
-\end{flushright}
+\begin{flushleft}
+    \textit{
+    Con questo elaborato concludo un percorso di studi che ha rappresentato un'importante tappa della mia vita. È un traguardo che in molti momenti ho pensato di non raggiungere, ma grazie al supporto e l’incoraggiamento di molte persone sono riuscito a raggiungerlo.\\
+    Innanzitutto, desidero ringraziare il mio relatore, il Professor Marco Cagnazzo, per la sua preziosa guida e il suo costante supporto. Grazie alla sua disponibilità e alla sua competenza, ho potuto approfondire le mie conoscenze e sviluppare un lavoro che sono orgoglioso di presentare.\\
+    Un ringraziamento particolare va ai miei genitori, che mi hanno sempre sostenuto e incoraggiato durante questi anni di studio.\\
+    Vorrei ringraziare i miei amici, in particolare Marco e Matteo, che sono stati sempre presenti e che hanno condiviso con me gioie e fatiche, dandomi una mano ad alleviare le tensioni e superare anche i momenti più faticosi.\\
+    Vorrei ringraziare Chiara, la mia fidanzata, che mi ha sopportato e supportato in questo percorso dandomi una mano nei momenti di bisogno.\\
+    Vorrei ringraziare tutti i miei colleghi di corso, in particolar modo Marco, Leonardo, Nicolo, Lucrezia e Riccardo. Per avermi spronato ad andare avanti e non rinunciare a questo obbiettivo, anche nei momenti in cui ero prossimo a rassegnarmi.\\
+    Infine, vorrei ringraziare tutti i miei professori, che mi hanno aiutato a crescere e a maturare come persona e come professionista.\\
+    Grazie a tutti voi, grazie per avermi reso migliore, come persona e come professionista.}
+\end{flushleft}
 \vspace{\stretch{4}}
