--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -149,7 +149,7 @@
 }@misc{CompressAILibrary,
   author = {InterDigital Communications, Inc.},
   title = {CompressAI},
-  howpublished = {\url{https://interdigitalinc.github.io/CompressAI/#}},
+  howpublished = {\url{https://interdigitalinc.github.io/CompressAI/}},
   note = {Consultato: 17-10-2023}
 }
 @inproceedings{wang2003multiscale,
