Fixed some broken references

--- a/Capitoli/metodiIntelligenti.tex
+++ b/Capitoli/metodiIntelligenti.tex
@@ -88,7 +88,7 @@ Il team di Ballé fornisce anche i dettagli implementativi per i livelli della r
     \caption{Ad ogni riga della tabella corrisponde un livello del modello generalizzato, i dati della tabella sono stati ricavati dal documento  \cite{minnen2018joint}}
     \label{tab:mbtLayers}
 \end{table}\\
-Possiamo vedere degli esempi di compressione con questa rete nelle immagini \ref{fig:mbt2018Example} e \ref{fig:mbt2018_meanExample}, le due immagini sono state prodotte da due versioni diverse della rete, rispettivamente con media della gaussiana variabile e con media della gaussiana fissata a zero.\\
+Possiamo vedere degli esempi di compressione con questa rete nelle immagini \ref{fig:CompressedMbt2018} e \ref{fig:CompressedMbt2018Mean}, le due immagini sono state prodotte da due versioni diverse della rete, rispettivamente con media della gaussiana variabile e con media della gaussiana fissata a zero.\\
     
 
 \subsection{Cheng 2020}
@@ -125,7 +125,7 @@ Questi moduli però richiedono una grande quantità di tempo in fase di addestra
     \caption{Varianti degli attention modules scviluppati da Cheng 2020 et al., immagine presa dal documento \cite{cheng2020learned}}
     \label{fig:cheng2020AttnModule}
 \end{figure}\\
-Possiamo vedere degli esempi di compressione con questa rete nelle immagini \ref{fig:cheng2020Example} e \ref{fig:cheng2020_attnExample}, le due immagini sono state prodotte da due versioni diverse della rete, rispettivamente senza \textit{Attnetion module} e con \textit{Attnetion module}.\\
+Possiamo vedere degli esempi di compressione con questa rete nelle immagini \ref{fig:CompressedCheng2020} e \ref{fig:CompressedCheng2020Attention}, le due immagini sono state prodotte da due versioni diverse della rete, rispettivamente senza \textit{Attnetion module} e con \textit{Attnetion module}.\\
 \newpage
 
 \subsection{Wang 2022}
